@@ -6,7 +6,7 @@
 #
 # thomas@linuxmuster.net
 # GPL V3
-# 20190327
+# 20191206
 #
 
 # read linuxmuster environment
@@ -87,6 +87,9 @@ update_linbofs() {
  # copy default start.conf
  cp -f $LINBODIR/start.conf .
 
+ # copy timezone info file
+ [ -n "$zi" -a -e "$zi" ] && cp -L "$zi" etc/localtime
+
  # pack default linbofs${suffix}.lz again
  find . | cpio --quiet -o -H newc | lzma -zcv > "$linbofs" ; RC="$?"
  [ $RC -ne 0 ] && bailout "failed!"
@@ -115,6 +118,9 @@ if [ -z "$linbo_passwd" ]; then
 fi
 # md5sum of linbo password goes into ramdisk
 linbo_md5passwd=`echo -n $linbo_passwd | md5sum | awk '{ print $1 }'`
+
+# timezone
+[ -e /etc/localtime ] && zi="$(LANG=C file /etc/localtime | awk '{ print $5 }')"
 
 # process linbofs updates
 update_linbofs
